tests/facebook_fbt_none/facebook_fbt_none.exp
Error: main.js:4
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ React element `fbt`
  4: (<fbt />: number); // Error: ReactElement ~> number
      ^^^^^^^ object type. This type is incompatible with
  4: (<fbt />: number); // Error: ReactElement ~> number
               ^^^^^^ number


Found 1 error
